@@ -1,7 +1,7 @@
 /***************************************************************************
  *               GFitsTable.i - FITS abstract table base class             *
  * ----------------------------------------------------------------------- *
- *  copyright (C) 2008-2015 by Juergen Knoedlseder                         *
+ *  copyright (C) 2008-2017 by Juergen Knoedlseder                         *
  * ----------------------------------------------------------------------- *
  *                                                                         *
  *  This program is free software: you can redistribute it and/or modify   *
@@ -120,7 +120,6 @@ public:
     virtual HDUType     exttype(void) const = 0;
 
     // Implemented Methods
-    const int&     size(void) const;
     GFitsTableCol* set(const int& colnum, const GFitsTableCol& column);
     GFitsTableCol* set(const std::string& colname, const GFitsTableCol& column);
     GFitsTableCol* append(const GFitsTableCol& column);
